--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,11 +1,8 @@
-#chart {
-    height: 440px;
-}
+/*#chart {*/
+    /*height: 440px;*/
+/*}*/
 #pie {
-    height: 500px;
-    width: 1100px;
-    margin-top: 37px;
-    margin-left: 78px;
+    margin-left: 56px;
 }
 
 .dx-texteditor {
